# project-kiwi

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  bun.lockb  docker-compose.yml  gradle.properties  gradlew  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  settings.gradle.kts
.github/workflows/: build-gradle.yaml  build-page.yaml  build-rust.yaml  gradle-generate-depdency-graph.yaml
audio/: Cargo.toml  Readme.md  build.gradle.kts
audio/src/: main.rs
auth/: Cargo.toml
auth/src/: main.rs
buildSrc/: build.gradle.kts
communication/: Cargo.toml  Readme.md
communication/src/: main.rs
dev/av1an-test/: docker-compose.yaml
dev/dev-env/: docker-compose.yaml
docs/: bun.lockb  index.html  tsconfig.json
docs/blog/: authors.yml  hello world.mdx
frontend/: Dockerfile  README.md  build.gradle.kts  bun.lockb  package.json  svelte.config.js  tailwind.config.cjs  vite.config.ts
frontend/src/: app.d.ts  app.html  hooks.server.ts
gateway/: application.conf  build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
media/: build.gradle.kts
page/: docusaurus.config.ts  package.json  sidebars.ts
page/blog/: authors.yml
page/docs/: 001_overview.md  index.md
proto/: audio.proto  auth.proto  post.proto  relay.proto  snowflake.proto
relay/: Cargo.toml
relay/src/: main.rs  startup.rs
services/: build.gradle.kts
services/core/: Cargo.toml
services/core/src/: main.rs  startup.rs
services/core/src/graphql/: auth.rs  comment.rs  context.rs  guild.rs  media.rs  mod.rs  post.rs  profile.rs  publication.rs
services/core/src/main/kotlin/de/phyrone/kiwi/gateway/: WebApplication.kt  minio.kt  webapp.kt
services/core/src/main/kotlin/de/phyrone/kiwi/gateway/documents/: AuthCheckResponse.kt  RegisterRequest.kt
services/core/src/main/kotlin/de/phyrone/kiwi/gateway/packets/: clientbound.kt  serverbound.kt
services/core/src/main/kotlin/de/phyrone/kiwi/gateway/routes/: Api1Posts.kt  Api1Users.kt  routes.kt
services/core/src/main/kotlin/de/phyrone/kiwi/gateway/systems/: WebSocketSubscriptionService.kt
services/core/src/main/resources/: application.conf
services/core/src/web/: 404.html  auth.rs  graphql.rs  mod.rs  post.rs
services/frontend/: .eslintignore  .eslintrc.cjs  .gitignore  .npmrc  Dockerfile  build-grpc.sh  build.gradle.kts  package.json  svelte.config.js  tailwind.config.ts  (+2 more)
services/gateway/: Cargo.toml  build.gradle.kts
services/gateway/src/: main.rs  packets.rs  session.rs  startup.rs
services/gateway/src/main/kotlin/de/phyrone/kiwi/gateway/: grpc-clients.kt  minio.kt  utils.kt
services/gateway/src/main/kotlin/de/phyrone/kiwi/gateway/documents/: JsonDocument.kt
services/gateway/src/main/kotlin/de/phyrone/kiwi/gateway/packets/: topic.kt
services/gateway/src/main/kotlin/de/phyrone/kiwi/gateway/routes/: Api1Auth.kt  Api1Media.kt  Api1Posts.kt
services/gateway/src/main/kotlin/de/phyrone/kiwi/gateway/systems/: UserPrincipal.kt  WebSocketSubscriptionService.kt
services/media/: Cargo.toml  build.gradle.kts
services/media/src/: main.rs
services/media/src/main/kotlin/de/phyrone/kiwi/media/: Main.kt  StartupParams.kt
services/new_core/: Cargo.toml
services/new_core/src/: main.rs  startup.rs
services/new_core/src/web/: auth.rs
services/relay/: Cargo.toml  build.gradle.kts
services/relay/src/: a.rs  main.rs  startup.rs
services/snowflake/: Cargo.toml  Dockerfile  build.rs
services/snowflake/src/: main.rs
shared/: build.gradle.kts
shared/common/: Cargo.toml  build.gradle.kts
shared/common/src/main/kotlin/de/phyrone/kiwi/common/: CommonModule.kt  CommonsModule.kt  ShutdownHandler.kt  Slf4jKoinLogger.kt  ordered_executor.kt  utils.kt
shared/common/src/main/kotlin/de/phyrone/kiwi/common/config/: ConfigModule.kt  ConfigStartupParams.kt
shared/common/src/main/kotlin/de/phyrone/kiwi/common/crypto/: Argon2.kt  Argon2Raw.kt
shared/common/src/main/kotlin/de/phyrone/kiwi/common/oneof/: OneOf2.kt
shared/common/src/main/kotlin/de/phyrone/kiwi/common/systems/: ShutdownHook.kt  StartupRunner.kt
shared/common/src/main/resources/: logback.xml
shared/common/src/main/rust/: glide_id.rs  lib.rs  params.rs  tracing_logger.rs  utils.rs
shared/common/src/test/kotlin/: HumanizeMemorySizeTest.kt
shared/database/: Cargo.toml  build.gradle.kts  generate-entites.sh
shared/database/migration/: Cargo.toml  README.md
shared/database/migration/src/: m20220101_000001_create_table.rs
shared/database/src/: lib.rs
shared/database/src/batch/: mod.rs  post.rs  post_read.rs
shared/database/src/main/kotlin/de/phyrone/kiwi/database/: DatabaseMigrator.kt  DatabaseModule.kt  DatabaseShutdown.kt  DatabaseStartupParams.kt  PostgresConfiguration.kt  utils.kt
shared/database/src/main/resources/files/db/migration/: R1_0_0__Initial Schema.sql  V1_0_0__Initial Schema.sql
shared/database/src/main/rust/: lib.rs
shared/database/src/main/rust/orm/: account.rs  account_key.rs  actor.rs  asset.rs  asset_variant.rs  channel.rs  configuration.rs  content.rs  content_tag.rs  flyway_schema_history.rs  guild.rs  guild_channel.rs  mod.rs  post.rs  post_attachment.rs  post_attatchment.rs  post_flag.rs  post_tag.rs  prelude.rs  profile.rs  sea_orm_active_enums.rs  user.rs  user_key.rs
shared/database/src/orm/: account.rs  account_key.rs  actor.rs  asset.rs  asset_processing_task.rs  asset_variant.rs  attachment.rs  channel.rs  channel_message.rs  configuration.rs  content_flag.rs  foreigner.rs  guild.rs  guild_channel.rs  media.rs  mod.rs  node.rs  post.rs  post_attachment.rs  post_attatchment.rs  post_flag.rs  prelude.rs  profile.rs  publication.rs  sea_orm_active_enums.rs  user.rs  user_key.rs
shared/proto/: Cargo.toml  build.gradle.kts  build.rs
shared/proto/src/: lib.rs
shared/proto/src/main/kotlin/de/phyrone/kiwi/proto/: clients.kt
shared/web/: Cargo.toml
shared/web/src/: auth.rs  lib.rs  rfc9457.rs  session.rs
shared/web/src/main/rust/: auth.rs  lib.rs
shared/web/src/utils/serde/: base36.rs
snowflake/: Cargo.toml  Dockerfile
snowflake/src/: main.rs
sql/: 001_down.sql  001_up.sql
src/: main.rs
(+237 files in other folders)
