[workspace]
resolver = "2"
members = [
    "shared/proto",
    "shared/common",
    "shared/database",
    "shared/database/migration",
    "shared/web",
    # Services
    "services/relay",
    "services/snowflake",
    "services/gateway",
    "services/core",
    "services/media",
    "services/worker",
    "services/frontend/src-tauri", "shared/serde-juniper",
]
