[workspace]
resolver = "2"
members = [
    "shared/proto",
    "shared/common",
    "shared/database",
    "shared/database/migration",
    "shared/web",
    # Services
    "services/relay",
    "services/snowflake",
    "services/core",
    "services/frontend/src-tauri",
    "shared/sk-embedded",
]
