[package]
name = "snowflake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
clap = { version = "4.5.2", features = ["derive", "env"] }
clap-num = "1.1.1"
error-stack = "0.4.1"
fast_log = { version = "1.6.16", features = ["zip"] }
hexafreeze = "0.5.0"
log = "0.4.21"
prost = "0.12.3"
tokio = { version = "1.37.0", features = ["full"] }
tonic = { version = "0.11.0", features = ["tls", "zstd"] }
proto = { path = "../shared/proto" }

[build-dependencies]
tonic-build = "0.11.0"
