[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../shared/common" }
database = { path = "../../shared/database" }
web = { path = "../../shared/web" }
axum.workspace = true
clap.workspace = true
# danger-allow-state-serialisation: Only serialize state into the database
webauthn-rs = { version = "0.5.0", features = ["preview-features", "danger-allow-state-serialisation"] }
tokio.workspace = true
error-stack.workspace = true
jsonwebtoken = "9.3.0"
sea-orm.workspace = true
rmp-serde = "1.3.0"
serde.workspace = true
mime = "0.3.17"
serde_json = { version = "1.0.116", features = ["alloc", "preserve_order", "raw_value"] }
simd-json = { version = "0.13.10", features = ["serde", "runtime-detection"] }
axum-auth = "0.7.0"
tower-http.workspace = true
tracing.workspace = true
url.workspace = true
tokio-stream = { version = "0.1.15", features = ["full"] }
radix_fmt.workspace = true
futures = "0.3.30"
dataloader.workspace = true
anyhow.workspace = true
regex.workspace = true
tokio-util.workspace = true
thiserror.workspace = true
rand.workspace = true
async-graphql.workspace = true
async-graphql-axum = "7.0.7"
axum-macros = "0.4.1"
schemars = "0.8.21"
html-minifier = "5.0.0"
tower = "0.4.13"
http = "1.1.0"
lazy_static.workspace = true
minify = "1.3.0"
redis.workspace = true
uuid.workspace = true
base64.workspace = true
