[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../shared/common" }
axum = { version = "0.7.5", features = ["ws", "http2"] }
clap = { version = "4.5.4", features = ["env", "derive", "string", "unicode", "cargo"] }
error-stack = { version = "0.4.1", features = ["serde"] }
fast_log = { version = "1.6.16", features = ["zip"] }
log = { version = "0.4.21", features = ["serde", "std"] }
jwt = "0.16.0"
tokio = { version = "1.37.0", features = ["full"] }
axum-extra = "0.9.3"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.198", features = ["alloc", "rc", "derive"] }
serde_json = { version = "1.0.116", features = ["alloc"] }
rmp-serde = "1.2.0"
ron = "0.8.1"
quick-xml = { version = "0.31.0", features = ["tokio", "serde", "serialize", "document-features"] }
futures = "0.3.30"
serde-protobuf = "0.8.2"
