[package]
name = "media"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["env", "derive", "string", "unicode", "cargo"] }
ffmpeg-sidecar = "1.1.0"
log = { version = "0.4.21", features = ["serde", "std"] }
