[package]
name = "relay"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common= { path = "../../shared/common" }
axum = { version = "0.7.5", features = ["ws", "http2"] }
fast_log = { version = "1.6.16", features = ["zip"] }
log = "0.4.21"
proto = {path = "../../shared/proto"}
tokio = { version = "1.37.0", features = ["full"] }
webrtc = "0.11.0"
clap = { version = "4.5.4", features = ["derive", "env", "string", "unicode", "cargo"] }
error-stack = { version = "0.4.1", features = ["serde"] }
reql = "0.11.2"
h3 = "0.0.5"
h3-quinn = "0.0.6"
h3-webtransport = "0.1.0"
tracing = "0.1.40"
