[package]
name = "snowflake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "env"] }
clap-num = "1.1.1"
error-stack = "0.4.1"
fast_log = { version = "1.6.16", features = ["zip"] }
hexafreeze = "0.5.0"
prost = "0.12.4"
tokio = { version = "1.37.0", features = ["full"] }
tonic = { version = "0.11.0", features = ["tls", "zstd"] }
common = { path = "../../shared/common" }
proto = { path = "../../shared/proto" }
tracing = "0.1.40"

[build-dependencies]
tonic-build = "0.11.0"
