[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["string", "env", "derive"] }
colored = "2.1.0"
dotenv = "0.15.0"
error-stack = { version = "0.4.1", features = ["anyhow", "serde"] }
fast_log = { version = "1.6.16", features = ["zip", "gzip"] }
figlet-rs = "0.1.5"
human-panic = "2.0.0"
is-root = "0.1.3"
log = { version = "0.4.21", features = ["std", "serde"] }


[lib]
path = "src/main/rust/lib.rs"
