[package]
name = "common"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
colored.workspace = true
dotenv = "0.15.0"
error-stack.workspace = true
figlet-rs = "0.1.5"
human-panic = "2.0.0"
humansize = "2.1.3"
is-root = "0.1.3"
itertools = "0.13.0"
jemallocator = "0.5.4"
num_cpus = "1.16.0"
os_info = "3.8.2"
sysinfo = "0.31.2"
thiserror.workspace = true
time = { version = "0.3.36", features = ["formatting", "parsing", "local-offset"] }
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["serde", "time", "serde_json", "json", "regex"] }
radix_fmt = "1.0.0"
serde.workspace = true
regex.workspace = true
regex-macro = "0.2.0"
once_cell = "1.19.0"
console-subscriber = "0.4.0"


[lib]
path = "src/main/rust/lib.rs"
