[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
migration = { path = "migration" }
sea-orm = { version = "0.12.15", features = [
    "runtime-tokio",
    "sqlx-postgres",
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "postgres-array",
    "macros",
    "with-json",
    "with-chrono",
    "with-uuid",
    "with-bigdecimal"
] }
serde = { version = "1.0.200", features = ["derive"] }
error-stack = { version = "0.4.1", features = ["serde"] }
colored = "2.1.0"
uuid = { version = "1.8.0", features = ["v4"] }
tracing = { version = "0.1.40", features = ["log"] }
sea-query = { version = "0.30.7", features = ["postgres-array", "with-bigdecimal", "with-chrono", "with-json", "with-uuid"] }
tokio = { version = "1.39.1", features = ["full", "tracing"] }
thiserror = "1.0.63"
dataloader = { version = "0.17.0", default-features = false, features = ["runtime-tokio", "tokio"] }
redis = { version = "0.26.0", features = ["tokio-comp", "tokio-rustls-comp", "serde"] }
