[package]
name = "database"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
chrono = "0.4.38"
clap.workspace = true
migration = { path = "migration" }
sea-orm.workspace = true
serde.workspace = true
error-stack.workspace = true
colored.workspace = true
uuid.workspace = true
tracing.workspace = true
sea-query.workspace = true
tokio.workspace = true
thiserror.workspace = true
dataloader.workspace = true
redis.workspace = true
moka.workspace = true
