[package]
name = "proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tonic = { version = "0.11.0", features = ["tls", "zstd"] }
prost = "0.12.3"
log = "0.4.21"

[build-dependencies]
prost-build = "0.12.4"
tonic-build = "0.11.0"

[lib]
path = "src/main/rust/lib.rs"
