[package]
name = "proto"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
tonic.workspace = true
tonic-types.workspace = true
prost.workspace = true
http.workspace = true
thiserror.workspace = true
error-stack.workspace = true
bytes.workspace = true
bytemuck = { version = "1.16.0", features = ["must_cast"] }
zerocopy = { version = "0.7.34", features = ["derive"] }
futures = "0.3.30"


[build-dependencies]
prost-build = "0.13.1"
tonic-build = "0.12.1"

[features]
default = []
