[package]
name = "web"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
database = { path = "../database" }
hmac = { version = "0.12.1", features = ["std", "reset"] }
#image = "0.25.1"
#img_hash = "3.2.0"
problem_details = { version = "0.6.0", features = ["axum", "xml"] }
sea-orm.workspace = true
tokio.workspace = true
serde.workspace = true
chrono.workspace = true
rmp-serde = "1.3.0"
base64.workspace = true
clap.workspace = true
axum = { version = "0.7.5", features = ["ws", "http2"] }
schemars = { version = "0.8.19", features = ["uuid", "url", "semver", "chrono"] }
url = { version = "2.5.0", features = ["serde"] }
serde_json = { version = "1.0.116", features = ["alloc", "preserve_order"] }
axum-auth = "0.7.0"
jsonwebtoken = "9.3.0"
radix_fmt.workspace = true
num.workspace = true

